--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -438,11 +438,14 @@ a.active{
 
 .bottom-section{
   width: 100%;
-  height: 490px;
+  height: auto;
+  padding: 0;
   background-color: #F07C00;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .position-row{
-  margin-top: 55px;
+  padding-top: 55px;
   width: 100%;
 }
 .row-height{
@@ -472,14 +475,127 @@ a.active{
 {
   background-color: white;
   padding-top: 30px;
-  height: 365px;
+  height: auto;
+  padding-bottom: 30px;
 }
 
 .footer-tab-div{
-  background-color: yellow;
+
   padding:0;
 }
 .footer-image
 {
   width: 100%;
+}
+
+.center
+{
+  text-align: center;
+}
+.main--foooter{
+  padding: 0;
+  background-color: orangered;
+}
+
+.footer-button-one
+{
+  color: white;
+  border: solid 1px white;
+  padding: 20px;
+}
+
+.footer--button--side
+{
+  margin-top: 42px;
+  position: relative;
+  left: 30px;
+}
+
+.footer-button-two
+{
+  color: #F07C00;
+  border: solid 1px white;
+  background-color: white;
+  padding: 20px;
+  margin-top: 10px;
+}
+
+.footer-font-weight
+{
+  font-weight: bold;
+}
+
+
+@media (max-width: 992px) and (min-width: 768px){
+  .container.container--tab {
+    max-width: 960px;
+  }
+  .position-row{
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+
+}
+@media (max-width: 768px) {
+  .footer-button-two{
+    margin-top: 0;
+  }
+  .footer-font-weight {
+    font-size: 25px;
+  }
+  .footer-button-one
+  {
+    margin-right: 15px;
+  }
+  .footer--col-change
+  {
+    padding-left: 0
+  }
+  .footer--col-icon{
+    padding-left: 0
+  }
+  .footer-icon-thumb
+  {
+    font-size: 3.5em;
+  }
+}
+
+@media (max-width: 567px) {
+
+  .footer-button-two{
+    margin-top: 0;
+  }
+  .footer-font-weight {
+    font-size: 25px;
+  }
+  .footer-button-one
+  {
+    margin-right: 15px;
+  }
+  .cont {
+    height: initial;
+  }
+  .image {
+
+    height: 30vh !important;
+  }
+}
+@media (max-width: 576px){
+  .bottom-section{
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .position-row {
+    padding-top: 20px;
+
+  }
+  .nav--mob{
+    padding: 5px 3px;
+    font-size: 14px;
+  }
+  .bottom-section{
+    height: auto;
+  }
+
 }
