--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -110,7 +110,7 @@
                       <p style="font-family: 'Eras Demi ITC';  color: gray;">One suggestion the Games Master has is to
                         play for commodities, this is how it was played some 200 years ago.
                         If you wish to learn of other modes to play please contact us.</p>
-                      <a href="#" target="_blank" style="color:#F07C00;">GAMES MASTER:</a>
+                      <a href="/games_master/index" target="_blank" style="color:#F07C00;">GAMES MASTER:</a>
                     </div>
                   </div>
                 </div>
@@ -128,7 +128,7 @@
                         players stay within their budget and do not over spend. </p>
                       <p style=" color: gray;">For as little as 2c a minute with the total game cost about 20c, players
                         can be assured of getting value for money.</p>
-                      <a href="#" target="_blank" style="color:#F07C00;">ENTER HERE</a>
+                      <a href="/entries/index" target="_blank" style="color:#F07C00;">ENTER HERE</a>
                     </div>
                   </div>
                 </div>
@@ -160,28 +160,32 @@
       <div class="col-md-4 col-12 footer--col-change">
         <div class="row">
           <div class="row footer--button--side">
-            <div class="col-md-12 col-sm-5 col-5 footer-button-one">
-              <div class="row footer--button-row">
-                <div class="col-4 footer--col-icon">
-                  <i class="fa fa-thumbs-o-up fa-5x footer-icon-thumb"></i>
+           <%=link_to  chats_index_path , target: :_blank, style: "color:#F07C00" do %>
+              <div class="col-md-12 col-sm-5 col-5 footer-button-one">
+                <div class="row footer--button-row">
+                  <div class="col-4 footer--col-icon">
+                    <i class="fa fa-thumbs-o-up fa-5x footer-icon-thumb"></i>
+                  </div>
+                  <div class="col-8">
+                    <h1 class="footer-font-weight">Chat room 1</h1>
+                  </div>
                 </div>
-                <div class="col-8">
-                  <h1 class="footer-font-weight">Chat room 1</h1>
-                </div>
-              </div>
 
-            </div>
-            <div class="col-md-12 col-sm-5 col-5 footer-button-two" style="">
-              <div class="row">
-                <div class="col-4 footer--col-icon">
-                  <i class="fa fa-flag fa-5x footer-icon-thumb"></i>
-                </div>
-                <div class="col-8">
-                  <h1 class="footer-font-weight">Chat room 2</h1>
-                </div>
               </div>
+            <%end%> 
+            <%=link_to  chats_index_path , target: :_blank, style: "color:#F07C00" do %>
+              <div class="col-md-12 col-sm-5 col-5 footer-button-two" style="">
+                <div class="row">
+                  <div class="col-4 footer--col-icon">
+                    <i class="fa fa-flag fa-5x footer-icon-thumb"></i>
+                  </div>
+                  <div class="col-8">
+                    <h1 class="footer-font-weight">Chat room 2</h1>
+                  </div>
+                </div>
 
-            </div>
+              </div>
+            <%end%>  
           </div>
         </div>
 
