--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -110,7 +110,8 @@
                       <p style="font-family: 'Eras Demi ITC';  color: gray;">One suggestion the Games Master has is to
                         play for commodities, this is how it was played some 200 years ago.
                         If you wish to learn of other modes to play please contact us.</p>
-                      <a href="#" target="_blank" style="color:#F07C00;">GAMES MASTER:</a>
+<!--                      <a href="#" target="_blank" style="color:#F07C00;">GAMES MASTER:</a>-->
+                        <a href="mailto:GamesDirector@strippals.com" style="color:#F07C00;">Games Master:</a>
                     </div>
                   </div>
                 </div>
@@ -128,7 +129,8 @@
                         players stay within their budget and do not over spend. </p>
                       <p style=" color: gray;">For as little as 2c a minute with the total game cost about 20c, players
                         can be assured of getting value for money.</p>
-                      <a href="#" target="_blank" style="color:#F07C00;">ENTER HERE</a>
+<!--                      <a href="#" target="_blank" style="color:#F07C00;">ENTER HERE</a>-->
+                          <%=link_to "ENTER HERE", games_master_index_path, style: "color:#F07C00;", target: :_blank %>
                     </div>
                   </div>
                 </div>
