--- a/app/views/games_master/index.html.erb
+++ b/app/views/games_master/index.html.erb
@@ -43,7 +43,7 @@
       <h2 class="text-center heading-data">
 <!--        <img src="pencil-60-119100.png" class="mid-icons">-->
         <%= image_tag 'pencil-60-119100.png', class: "mid-icons"%>
-        <%=link_to "Ace Playing Modes", entries_index_path, target: :_blank %>
+        <%=link_to "Ace Playing Mode", entries_index_path, target: :_blank %>
       </h2>
 
       <p style="color:#2440c0;" class="text-center lines-data">Five Games</p>
