--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -128,7 +128,7 @@
                         play for commodities, this is how it was played some 200 years ago.
                         If you wish to learn of other modes to play please contact us.</p>
 <!--                      <a href="#" target="_blank" style="color:#F07C00;">GAMES MASTER:</a>-->
-                        <a href="mailto:khuramdogar73@gmail.com" style="color:#F07C00;">Games Master:</a>
+                        <a href="mailto:strippals@gmail.com" style="color:#F07C00;">Games Master:</a>
                     </div>
                   </div>
                 </div>
